manifests/jaeger-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  labels:
    app: jaeger
    app.kubernetes.io/service: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/service: jaeger
  strategy: {}
  template:
    metadata:
      labels:
        app.kubernetes.io/tracing: "true"
        app.kubernetes.io/service: jaeger
    spec:
      containers:
        - image: jaegertracing/all-in-one:1.28
          name: jeager-tracing
          ports:
            - containerPort: 5775
              protocol: UDP
            - containerPort: 6831
              protocol: UDP
            - containerPort: 6832
              protocol: UDP
            - containerPort: 5778
            - containerPort: 16686
            - containerPort: 14268
            - containerPort: 9411
          resources: {}
      restartPolicy: Always
status: {}
