manifests/tracing-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tracing
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/tracing: "true"
  podSelector:
    matchLabels:
      app.kubernetes.io/tracing: "true"
